Remove OnSuspend/OnResume notifications on Android.

These are incorrectly mixing disparate concepts. Chrome code expects
OnSuspend/OnResume to mean the system is about to go to sleep, not
just that there is no more visible activity.

This prevents background tasks like background audio from working
properly since the network connections are force killed. We could
workaround this by improving when OnSuspend/OnResume is sent, but
it seems no one really cares, so just delete these.

In fact a couple pieces of code explicitly reject OnSupend/OnResume
from Android since they do not mean what is expected. An alternate
signal for app suspension should be sent if this is ever needed
again in the future.

BUG=644515
TEST=background audio playback works.

Review-Url: https://codereview.chromium.org/2324923002
Cr-Commit-Position: refs/heads/master@{#417691}

Former-commit-id: 610004f26299d1eb31b18f7dce3e2d3740eb8c04